Update setup.sh
removed custom Atlas configs